class courses update
