# src/main/java/com/finalproject/backend/controllers/CourseController.java
@@ -24,7 +24,6 @@ public class CourseController {
     }
 
     @GetMapping("/{id}")
-    @PreAuthorize("hasAnyRole('ADMIN','TEACHER')")
     public Course getById(@PathVariable Long id) {
         return courseService.getById(id);
     }
