# src/main/java/com/finalproject/backend/controllers/UserController.java
@@ -7,6 +7,7 @@ import com.finalproject.backend.entities.User;
 import com.finalproject.backend.services.UserService;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -20,6 +21,7 @@ public class UserController {
     private UserService userService;
 
     @PostMapping("/register")
+    @PreAuthorize("hasRole('ADMIN')")
     public UserResponse register(@Valid @RequestBody RegisterRequest req) {
 
         User u = userService.register(req);
